Cant export java.base anymore